--- a/css/style.css
+++ b/css/style.css
@@ -291,7 +291,7 @@ h2 {
   background-color: #D19E5A;
   padding: 1rem;
   border: none;
-  margin-left: .5rem;
+  margin-right: .5rem;
   font-size: 1rem;
   border-radius: .375rem;
 }
