--- a/css/style.css
+++ b/css/style.css
@@ -345,20 +345,51 @@ h2 {
   margin: 0 auto;
 }
 
-.faq {
+
+
+
+.faq-card {
   padding: 1rem;
   border: 1px solid #CD9E53;
   border-radius: .375rem;
-  font-size: 1.25rem;
-  line-height: 1.5;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
 }
 
-.faq svg {
-  width: 1.25rem;
+.faq-click {
+  width: 100%;
+  background-color: rgb(2, 2, 2);
+  color: rgb(245, 238, 226);
+  border: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1.25rem;
+  line-height: 1.5;
 }
+
+.arrow {
+  width: 1.25rem;
+  cursor: pointer;
+}
+
+.arrow:focus {
+  color: aquamarine;
+  width: 40px;
+}
+
+.faq-click:focus~.answer {
+  display: block;
+}
+
+
+.answer {
+  display: none;
+  margin-top: 1rem;
+}
+
+.theme-icon:focus {
+  color: aqua;
+}
+
 
 footer {
   padding: 2rem 2.5rem;
